[workspace]
members = [
    "ports/glutin",
    "ports/libsimpleservo/capi/",
    "ports/libsimpleservo/jniapi/",
    "ports/libmlservo/",
    "tests/unit/*",
]
exclude = [".cargo"]

[profile.dev]
opt-level = 1
debug = true
lto = true
codegen-units = 1

[profile.release]
opt-level = 1
lto = true
codegen-units = 1

[patch.crates-io]
mozjs_sys = { git = "https://github.com/securesystemslab/pkru-safe-mozjs.git" }
#mozjs_sys = { path = "../mozjs" }
# If you need to temporarily test Servo with a local fork of some upstream
# crate, add that here. Use the form:
#
#     <crate> = { path = "/path/to/local/checkout" }
#
# Or for a git dependency:
#
#     [patch."https://github.com/servo/<repository>"]
#     <crate> = { path = "/path/to/local/checkout" }

# Those are here to dedupe winapi since mio is still using winapi 0.2.
mio = { git = "https://github.com/servo/mio.git", branch = "servo" }
iovec = { git = "https://github.com/servo/iovec.git", branch = "servo" }
cmake = { git = "https://github.com/alexcrichton/cmake-rs" }

#[patch."https://github.com/servo/mozjs#mozjs_sys:0.66.1"]
#"mozjs_sys" = { path = "../mozjs" }
